--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -974,101 +974,26 @@ a.auth-inline {
 
 /* =MasterLegend
 -------------------------------------------------------------- */
-
-/*#master-legend {*/
-  /*background: #777;*/
-  /*position: relative;*/
-  /*z-index: 30;*/
-  /*display: none;*/
-/*}*/
-/*.activity-enabled #master-legend {*/
-  /*display: block;*/
-/*}*/
-/*.content-visible #master-legend {*/
-  /*display: none;*/
-/*}*/
-
-/*ul.recent-points {*/
-  /*list-style: none;*/
-  /*margin: 0;*/
-  /*color: #ddd;*/
-/*}*/
-/*.recent-points li {*/
-  /*position: relative;*/
-/*}*/
-/*.recent-points li:hover {*/
-/*}*/
-/*.recent-points a {*/
-  /*color: #eee;*/
-  /*text-decoration: none;*/
-  /*float: left;*/
-  /*border-top: 1px solid #888;*/
-  /*border-bottom: 1px solid #666;*/
-  /*padding: 0.5em 0.5em 0.5em 3em;*/
-  /*width: 100%;*/
-  /*-webkit-box-sizing: border-box;*/
-  /*-moz-box-sizing: border-box;*/
-  /*box-sizing: border-box;*/
-/*}*/
-/*.recent-points li:first-child a {*/
-  /*border-top: 0;*/
-  /*padding-top: 0.75em;*/
-/*}*/
-/*.recent-points a:hover {*/
-  /*color: #fff;*/
-  /*background: #666;*/
-  /*border-color: #666;*/
-/*}*/
-/*.recent-points .avatar {*/
-  /*width: 2em;*/
-  /*height: 2em;*/
-  /*float: left;*/
-  /*margin-left: -2.5em;*/
-/*}*/
-
 #master-legend {
   display: none;
+  overflow: auto;
 
   background: #777;
-
   color: #eee;
-
-  /*width: 18em;*/
-  /*padding-top: 0.75em;*/
-  /*padding-right: 1em;*/
-  /*padding-bottom: 1em;*/
-  /*padding-left: 1em;*/
-
-
-  overflow: auto;
-  /*background-color: #ffffff;*/
-  /*background: #777;*/
-  /*position: relative;*/
-  /*z-index: 30;*/
-    /*display: none;*/
 }
 #master-legend header {
-  /*color: #fff;*/
   font-size: 2.3em;
   font-family: 'Dancing Script', cursive;
-  /*font-weight: 700;*/
   text-shadow: 1px -1px 1px rgba(0,0,0,0.5);
 }
 #master-legend p {
   margin: 0.3em 0 .4em; /* top, right, bottom */
   color: #eee;
-  font-size: 1.2em;
-  /*margin-top: 0px;*/
-  /*margin-right: 0px;*/
-  /*margin-bottom: 1.5em; */
+  font-size: 1.1em;
 }
-
-/*.activity-enabled #master-legend {*/
-  /*display: block;*/
-/*}*/
-/*.content-visible #master-legend {*/
-  /*display: none;*/
-/*}*/
+#master-legend hr {
+  margin: 0.5em 0;
+}
 /* All layers in the Master Legend list */
 #master-legend .unstyled-list {
   font-size: 0.875em;
@@ -1086,40 +1011,6 @@ a.auth-inline {
   width: auto;
   vertical-align: middle;
 }
-
-/*.layer-type-title label {*/
-  /*text-transform: none;*/
-/*}*/
-
-/*.layer-type-title:before {*/
-  /*content:"\0020";*/
-  /*position: absolute;*/
-  /*height:14px;*/
-  /*width:14px;*/
-  /*display: block;*/
-  /*border-right: 1px solid #0A9F67;*/
-  /*border-top: 1px solid #0A9F67;*/
-  /*background-color: #fff;*/
-  /*right:-8px;*/
-  /*top: 10px;*/
-
-  /*transform: rotate(45deg);*/
-  /*-ms-transform: rotate(45deg); *//* IE 9 */
-  /*-webkit-transform: rotate(45deg); *//* Safari and Chrome */
-  /*-o-transform: rotate(45deg); *//* Opera */
-  /*-moz-transform: rotate(45deg); *//* Firefox */
-/*}*/
-
-/* format items on the form */
-/*.layer-type-title {*/
-  /*font-weight: bold;*/
-  /*font-size:1.1em;*/
-  /*border-bottom:1px solid #999;*/
-  /*margin-right: 20px;*/
-  /*padding: 0.2em 0;*/
-
-/*}*/
-
 .layer-type-description {
   height: 0;
   overflow: hidden;
@@ -1164,40 +1055,26 @@ a.auth-inline {
 #master-legend .layer-type-list {
   font-size: 0.875em;
 }
-/*#master-legend .layer-type-list .layer-type-li {*/
-  /*cursor: pointer;*/
-/*}*/
 
 #master-legend .layer-type-title label, .layer-type-title input {
   cursor: pointer;
 }
 #master-legend .layer-type-title label {
-  /*background-color: #f26522;*/
   color: #ddd;
   font-weight: normal;
-  /*box-shadow: inset 0 -3px 0 #fff, -3px -3px #f26522, 3px -3px #f26522;*/
-/*}*/
- /*#master-legend .layer-type-list .active img {*/
-  /*position: relative;*/
   position: absolute;
   z-index: 20;
 
   text-transform: none;
 }
-
-/*.layer-type-title label, .layer-type-title input {*/
-  /*cursor: pointer;*/
-  /*text-transform: none;*/
-  /*color: #eee;*/
-  /*font-size: 1em;*/
-/*}*/
-
 /* highlight link when click is held down */
-#master-legend .layer-type-title:active label {
+/*#master-legend .layer-type-title:active label {*/
+#master-legend .layer-type-title:active label,
+#master-legend .shareabouts-layer-li:active a {
   color: #00aaff;
 }
 
-/*#master-legend .layer-type-list .active:after {*/
+/*#master-legend .layer-type-list:after {*/
   /*content: '';*/
   /*position: absolute;*/
   /*z-index: 10;*/
@@ -1222,10 +1099,9 @@ a.auth-inline {
 }
 @media screen and (min-width: 40.063em) {
   .active #master-legend {
+  /*#master-legend {*/
     height: 100%;
-    width: 18em;
-    /*width: 18em;*/
-    /*position: absolute;*/
+    width: 16em;
     position: relative;
     top: 0;
     right: 0;
@@ -1235,19 +1111,20 @@ a.auth-inline {
 
 /* Shareabouts layers */
 /*#master-legend .shareabouts-layer-title label, .shareabouts-layer-title input {*/
-#master-legend .shareabouts-layer-li {
+#master-legend .shareabouts-layer-li a {
   cursor: pointer;
   position: relative;
-}
-/*#master-legend .shareabouts-layer-title label {*/
-#master-legend .shareabouts-layer-li {
-  /*background-color: #f26522;*/
   color: #ddd;
-  /*box-shadow: inset 0 -3px 0 #fff, -3px -3px #f26522, 3px -3px #f26522;*/
-  /*}*/
-  /*#master-legend .layer-type-list .active img {*/
-  /*position: relative;*/
-  position: relative;
+  z-index: 20;
+  font-weight: normal;
+  text-decoration: none;
+  text-transform: none;
+}
+
+#master-legend .shareabouts-layer-title {
+  cursor: pointer;
+  width: 1em;
+  height: auto;
   z-index: 20;
 
   text-transform: none;
