--- a/src/sa_web/templates/language_picker.html
+++ b/src/sa_web/templates/language_picker.html
@@ -6,7 +6,8 @@
     <ul class="menu">
       <li class="menu-item">
         {% get_language_info for LANGUAGE_CODE as language %}
-        <a class="current-language {{ LANGUAGE_CODE }} btn btn-block">{{ language.name_local }} ⌄</a>
+        <!--<a class="current-language {{ LANGUAGE_CODE }} btn btn-block">{{ language.name_local }} ⌄</a>-->
+        <a class="current-language {{ LANGUAGE_CODE }} btn btn-block">Español / tiếng Việt ⌄</a>
 
         <form action="{% url 'set_language' %}" method="post">
           {% csrf_token %}
