Implement color legend for toggle layers
 - This could be improved by using HTML instead of an image
   pop-up.
 - Fixes #4

--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -1027,6 +1027,10 @@ ul.recent-points {
   width: auto;
   vertical-align: middle;
 }
+.layer-type-description img {
+  height: auto;
+  width: auto;
+}
 .layer-type-description {
   height: 0;
   overflow: visible;
